# yt-thumbs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/yt_thumbs/: __init__.py  cli.py  extractor.py
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_thumbnail_extraction.py  test_url_parsing.py
